logs/autocloud.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/autocloud'...
Listing './lib/python3.5/site-packages/autocloud/utils'...
Listing './lib/python3.5/site-packages/autocloud/web'...
Listing './lib/python3.5/site-packages/autocloud/web/static'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap-3.3.4-fedora'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap-3.3.4-fedora/css'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap-3.3.4-fedora/fonts'...
Listing './lib/python3.5/site-packages/autocloud/web/static/bootstrap-3.3.4-fedora/js'...
Listing './lib/python3.5/site-packages/autocloud/web/static/css'...
Listing './lib/python3.5/site-packages/autocloud/web/static/css/fonts'...
Listing './lib/python3.5/site-packages/autocloud/web/static/ico'...
Listing './lib/python3.5/site-packages/autocloud/web/static/img'...
Listing './lib/python3.5/site-packages/autocloud/web/static/js'...
Listing './lib/python3.5/site-packages/autocloud/web/templates'...
Compiling './lib/python3.5/site-packages/autocloud/web/utils.py'...
***   File "./lib/python3.5/site-packages/autocloud/web/utils.py", line 8
    except exc.NoResultFound, exc.MultipleResultsFound:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/autocloud-0.7.4.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/fedmsg'...
Listing './lib/python3.5/site-packages/fedmsg/commands'...
Listing './lib/python3.5/site-packages/fedmsg/consumers'...
Listing './lib/python3.5/site-packages/fedmsg/crypto'...
Listing './lib/python3.5/site-packages/fedmsg/encoding'...
Listing './lib/python3.5/site-packages/fedmsg/meta'...
Listing './lib/python3.5/site-packages/fedmsg/replay'...
Listing './lib/python3.5/site-packages/fedmsg/tests'...
Listing './lib/python3.5/site-packages/fedmsg/tests/test_certs'...
Listing './lib/python3.5/site-packages/fedmsg/tests/test_certs/gpg'...
Listing './lib/python3.5/site-packages/fedmsg/tests/test_certs/keys'...
Listing './lib/python3.5/site-packages/fedmsg/tests/test_certs/tmp'...
Listing './lib/python3.5/site-packages/fedmsg/text'...
Listing './lib/python3.5/site-packages/fedmsg-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/kitchen'...
Listing './lib/python3.5/site-packages/kitchen/collections'...
Listing './lib/python3.5/site-packages/kitchen/i18n'...
Listing './lib/python3.5/site-packages/kitchen/iterutils'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/base64'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/sets'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25/collections'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27/subprocess'...
Listing './lib/python3.5/site-packages/kitchen/text'...
Listing './lib/python3.5/site-packages/kitchen/versioning'...
Listing './lib/python3.5/site-packages/kitchen-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/retask'...
Listing './lib/python3.5/site-packages/retask-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
